fix scrollbar in firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,6 @@ input[type=number] {
 .invisible-scroll::-webkit-scrollbar-thumb {
   background: #FF0000;
 }
+.invisible-scroll {
+  scrollbar-width: none;
+}
